<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@android:drawable/ic_menu_add"
        android:id="@+id/action_add_product"
        app:showAsAction="always"
        android:title="@string/action_add_product"></item>
    <item android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:id="@+id/action_sort_alphabetically"
        app:showAsAction="always"
        android:title="@string/action_sort_product"></item>

    <item android:title="@string/action_setting_general"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:id="@+id/action_settings_general"/>
    <item android:title="@string/action_setting_account"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:id="@+id/action_settings_account"></item>

</menu>